--- a/produk/templates/produk/produk_delete.html
+++ b/produk/templates/produk/produk_delete.html
@@ -128,7 +128,7 @@
 
     <div class="product-preview">
         <div class="product-preview-content">
-            <div class="product-preview-image" style="background-image: url('{{ produk.get_default_image }}');"></div>
+            <div class="product-preview-image" style="background-image: url('{{ produk.get_image_url }}');"></div>
             <div class="product-preview-info">
                 <h3>{{ produk.nama }}</h3>
                 <div class="price">{{ produk.get_formatted_harga }}</div>
