--- a/produk/templates/produk/homepage.html
+++ b/produk/templates/produk/homepage.html
@@ -129,7 +129,7 @@
     <div class="product-grid">
         {% for produk in featured_products %}
         <div class="product-card">
-            <div class="product-image" style="background-image: url('{{ produk.get_default_image }}');"></div>
+            <div class="product-image" style="background-image: url('{{ produk.get_image_url }}');"></div>
             <div class="product-info">
                 <h3>{{ produk.nama }}</h3>
                 <div class="product-price">{{ produk.get_formatted_harga }}</div>
